apps/traefik/addons/gateway-tls.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway-tls
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: "172.31.1.34"
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: germanium-cz-prod-tls
            namespace: default
